--- a/views/index.html
+++ b/views/index.html
@@ -9,27 +9,55 @@
    </head>
 
    <body>
-    <h1>Timestamp Microservice</h1>
+    <h1><span id="timestamp">Timestamp</span>Microservice</h1>
     <hr />
     <div class="container">
-        <div>
-          
-        <div>
-      <h3>Example Usage:</h3>
-      <ul>
-        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
-      </ul>
+        <div class='item'>
+          <h3>Valid date</h3>
+          <h4>Request</h4>
+          <code>GET /api/2021-10-28</code>
+          <h4>Response</h4>
+          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+        </div>
+        <div class='item'>
+          <h3>Valid date</h3>
+          <h4>Request</h4>
+          <code>GET /api/2021-10-28</code>
+          <h4>Response</h4>
+          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+        </div>
+        <div class='item'>
+          <h3>Valid date</h3>
+          <h4>Request</h4>
+          <code>GET /api/2021-10-28</code>
+          <h4>Response</h4>
+          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+        </div>
+        <div class='item'>
+          <h3>Valid date</h3>
+          <h4>Request</h4>
+          <code>GET /api/2021-10-28</code>
+          <h4>Response</h4>
+          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+        </div>
 
-      <h3>Example Output:</h3>
-      <p>
-        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-      </p>
     </div>
-    <div class="footer">
-      <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
-      </p>
-    </div>
+    <!--
+    <h3>Example Usage:</h3>
+    <ul>
+      <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
+      <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
+    </ul>
+
+    <h3>Example Output:</h3>
+    <p>
+      <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+    </p>
+  </div>
+  <div class="footer">
+    <p>
+      By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
+    </p>
+  -->
   </body>
 </html>
