--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,35 @@
 /****** Main Styling ******/
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Arial', sans-serif;
 	font-size: 16px;
 	color: #222;
 	background-color: #FaFaFa;
 	text-align: center;
 	line-height: 1.4em;
+	width: 100%;
+	background-color: black;
+	color: white;
 }
 
+#timestamp {
+	color: green;
+}
 .container {
 	padding: 0;
 	margin-top: 40px;
-  border: solid;
   width: 80%;
   margin: 0 auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-gap: 1em;
+	font-size: 0.8em;
+	text-align: left;
 }
-
+.container .item {
+	border: solid;
+	padding:1.5em;
+}
 h3 {
   margin-top: 30px;
 }
