--- a/views/index.html
+++ b/views/index.html
@@ -15,30 +15,34 @@
         <div class='item'>
           <h3>Valid date</h3>
           <h4>Request</h4>
-          <code>GET /api/2021-10-28</code>
+          <code style='background-color: #545350; color: white'>GET /api/2021-10-28</code>
           <h4>Response</h4>
-          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <code style="background-color: #545350; color: white">{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <button type="button" class="button">Try it</button>
         </div>
         <div class='item'>
           <h3>Valid date</h3>
           <h4>Request</h4>
-          <code>GET /api/2021-10-28</code>
+          <code style='background-color: #545350; color: white'>GET /api/2021-10-28</code>
           <h4>Response</h4>
-          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <code style='background-color: #545350; color: white'>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <button type="button" class="button">Try it</button>
         </div>
         <div class='item'>
           <h3>Valid date</h3>
           <h4>Request</h4>
-          <code>GET /api/2021-10-28</code>
+          <code style='background-color: #545350; color: white'>GET /api/2021-10-28</code>
           <h4>Response</h4>
-          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <code style='background-color: #545350; color: white'>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <button type="button" class="button">Try it</button>
         </div>
         <div class='item'>
           <h3>Valid date</h3>
           <h4>Request</h4>
-          <code>GET /api/2021-10-28</code>
+          <code style='background-color: #545350; color: white'>GET /api/2021-10-28</code>
           <h4>Response</h4>
-          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <code style='background-color: #545350; color: white'>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+          <button type="button" class="button">Try it</button>
         </div>
 
     </div>
