--- a/public/style.css
+++ b/public/style.css
@@ -28,13 +28,36 @@ body {
 }
 .container .item {
 	border: solid green;
-	padding:1.5em;
+	padding: 1.5em;
 	display: flex;
 	flex-direction: column;
+	border-radius: 0.3em;
 }
 code {
 	background-color: white;
 	color: red;
+	padding: 1em;
+	border-radius: 0.3em;
+	lineheight: 1.5 !important;
+}
+.container .item button {
+	background-color: green;
+	color: inherit;
+	border: green;
+	flex: 1;
+	margin-top: 1em;
+	padding: 0.8em 0;
+	cursor: pointer;
+}
+a {
+	color: white !important;
+	text-decoration: none;
+	margin-top: 1em;
+	background-color: green;
+	width: 5em;
+	text-align: center;
+	border-radius: 0.5em;
+	padding: 0.5em;
 }
 h3 {
   margin-top: 30px;
